# yasim

./: .gitignore  .gitmodules  .markdownlint.json  Copying.md  MANIFEST.in  Makefile  NEWS.md  News.md  Readme.md  TODO.md  activate_gpmf.sh  bashrc  clear_pyc.sh  cythonize.sh  get_imports.sh  main.sh  notebook-checkin.sh  notebook-checkout.sh  pyproject.toml  requirements.R  requirements.txt  requirements_pbsim3.txt  requirements_te.txt  requirements_test.txt  scc.sh  setup.py  setup_gpmf.sh  shfmt.sh  show_installed_r_packages.R  todo.md
R/: dge_compare.R  dge_merge.R  dge_merge_genelevel.R  generate_ground_truth.R  lib.R  plot_cpptetgs.R  plot_cpptetgs_genelevel.R  show_installed_r_packages.R  test_bam_satistics.R  test_featureCounts.R  test_htseq.R  test_salmon.R  test_stringtie.R  tmp.R
R/deprecated/: generate_ground_truth.R  test_featureCounts.R
R/labw_naive_prime_esc/: Plots_codes.R
R/lib/: cpptetgs.R  featureCounts.R  htseq.R  loader.R  salmon.R  yasim.R
doc/: .gitignore  DownstreamSimulators.md  Makefile  README  Readme.md  ReviewOfError.md  apidoc_index.md  cli_docs.toml  conf.py  index.md  preconfigure.py
doc/fig/: yasim_sc.graphml
doc/reviews/: UpstreamSimulators.md
doc/src/: Makefile  design.md  faq.md  index.md
doc/tutorial/: Makefile  index.ipynb.md
doc/tutorial_llrg/: Makefile  index.ipynb.md
doc/tutorial_sctcr/: index.ipynb.md
docker/: .gitignore  Makefile  pbsim_builder.Dockerfile
env/: Readme.md  yasim-badread.yml  yasim-codan.yml  yasim-detonate.yml  yasim-isoformswitchanalyzer-syq.yml  yasim-isoseq.yml  yasim-pbsim1.yml  yasim-pbsim2.yml  yasim-pbsim3.yml  yasim-r43.yml  yasim-salmon.yml  yasim-spades.yml  yasim-transabyss.yml  yasim-transrate.yml  yasim-trinity.yml  yasim_cluster.yml  yasim_dev.yml  yasim_dev_doc.yml  yasim_dev_isoformswitchanalyzer_syq.yml  yasim_dev_windows.yml  yasim_minimal.yml  yasim_salmon.yml
explore/: Readme.md
makefile/: Makefile  Readme.md  STAR.mk  featureCounts.mk  final_targets.mk  hisat2.mk  htseq.mk  minimap2.mk  salmon.mk  simulators.mk  stringtie.mk
makefile_test_data/: Makefile  Readme.md  STAR.mk  cpptetgs.mk  featureCounts.mk  final_targets.mk  general.mk  htseq.mk  minimap2.mk  salmon.mk  simulators.mk  stringtie.mk  tmp.R
orphan_doc/: design.md
shell/: Makefile  STAR.mk  badread.sh  conf.sh  general.mk  generate_STAR_index.sh  generate_as_dge.sh  generate_salmon_index.sh  hisat2.mk  htseq.mk  minimap2.mk  nanosim.sh  perform_STAR_align.sh  perform_salmon_quant.sh  perform_salmon_quant_over_dwgsim.sh  perform_stringtie.sh  salmon.mk  simlord.sh  stringtie.mk
singularity/: .dockerignore  .gitignore  Makefile  yasim.Dockerfile
suppl_data_analysis/: .gitignore  perform.sh  requirements.R
test/: .gitignore  Makefile  Readme.md  bench_variation.py  conftest.py  run.sh  tmp.py
tmp_0d20xy/: stringtie_minimap2_badread_pacbio2016.gtf.tmp
(+620 files in other folders)
