[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "yasim"
description = "yasim -- Yet Another SIMulator for Alternative Splicing and Differentially Expressed Gene"
authors = [
    { name = "YU Zhejian", email = "Zhejian.19@intl.zju.edu.cn" },
    { name = "SU Yaqi", email = "Yaqi.19@intl.zju.edu.cn" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: R",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities"
]
requires-python = ">=3.7"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools]
license-files = ["License.md", "Copying.md"]

[tool.setuptools.dynamic]
version = { attr = "yasim.__version__" }
readme = { file = "Readme.md" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-vv --continue-on-collection-errors 	--junitxml=dist/pytest/junit.xml --html=dist/htdocs/pytest_report.html --self-contained-html --doctest-modules --doctest-continue-on-failure --ignore-glob=*/_deprecated/* --cov --cov-report=html"
testpaths = "test/ src/"
log_level = 8
log_file = "pytest.log"
log_file_level = 8
log_cli = false
junit_logging = "all"
junit_log_passing_tests = true
junit_duration_report = "call"

[tool.coverage.run]
source = [
    "src",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = "dist/htdocs/cov_html"
